# Real-Time-LLM-System-for-Disaster-Tweet-Classification

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README-crisis-llm.md  README.md  README.txt  REPLACE_ME.md  docker-compose.yml  pyproject.toml  requirements.patch.txt  requirements.txt  run_all.ps1
_patched/: streamlit_app.py
api/: app.py
app/: api.py  streamlit_app.py
app_ui/: streamlit_app.py
configs/: bin.yaml  bin_es.yaml  bin_es_highlr.yaml  default.yaml  gpu.yaml
data/: README.md  label_profile_bin.csv  val.csv
data/processed/: train.csv  val.csv
docs/: binary_disaster_classifier_deck.pptx  report_binary_disaster_tweets.md
notebooks/: Disaster_Tweets_AI_Systems_Engineering.ipynb
scripts/: prepare.py  run_all.ps1  run_all.sh  run_all_bin_mounted.ps1  run_all_bin_mounted.sh  test_api.http  train.py
src/: train.py
src/ai_bin/: api.py  cli.py  kaggle_submit_bin.py  streamlit_app.py  train.py  utils.py
src/ai_tweets/: api.py  api_app.py  cli.py  data_prep.py  data_utils.py  prepare.py  serve.py  serve_app.py  streamlit_app.py  train.py  utils.py
src/ai_tweets/app/: main.py
tests/: test_api_smoke.py  test_train_smoke.py
tools/: prep_data.py
ui/: streamlit_app.py
web/: test.html
