[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster-tweets-llm-pro"
version = "0.2.4"
description = "Real-time LLM system for disaster tweet classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-tweets = "ai_tweets.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
